# arbitragelab

./: .bumpversion.cfg  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_NOTE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  RELEASE.rst  coverage  obfuscate.sh  pylint  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_suggestion.md
.github/workflows/: publish-final-dist.yaml  publish-test-dist.yaml  python-tests.yaml
arbitragelab/: __init__.py
arbitragelab/arblab_tearsheet/: __init__.py  tearsheet.py  tearsheet_test.ipynb
arbitragelab/auto_arima/: __init__.py  arima_predict.py
arbitragelab/codependence/: __init__.py  codependence_matrix.py  correlation.py  gnpr_distance.py  information.py  optimal_transport.py
arbitragelab/cointegration_approach/: __init__.py  base.py  coint_sim.py  engle_granger.py  johansen.py  minimum_profit.py  minimum_profit_simulation.py  multi_coint.py  signals.py  small_mean_rev_portfolio.py  sparse_mr_portfolio.py  trading_simulation.py  utils.py
arbitragelab/copula_approach/: Copula_Notebook_Liew_etal.ipynb  __init__.py  base.py  copula_calculation.py  copula_generate.py  copula_generate_mixedcopula.py  copula_strategy.py  copula_strategy_basic.py  copula_strategy_mpi.py  main.py  pairs_selection.py  switcher.py  vine_copula_partner_selection.py  vine_copula_partner_selection_utils.py  vinecop_generate.py  vinecop_strategy.py
arbitragelab/copula_approach/archimedean/: __init__.py  clayton.py  frank.py  gumbel.py  joe.py  n13.py  n14.py
arbitragelab/copula_strategy(draft)/: copula_generate.py  copula_strategy.py
arbitragelab/distance_approach/: __init__.py  basic_distance_approach.py  pearson_distance_approach.py
arbitragelab/heat_potential_approach/: heat_potential.py
arbitragelab/hedge_ratios/: __init__.py  adf_optimal.py  box_tiao.py  half_life.py  johansen.py  linear.py  spread_construction.py
arbitragelab/ml_approach/: __init__.py  base.py  correlation_filter.py  dbscan_pairs_clustering.py  feature_expander.py  filters.py  mlp.py  mlp_classifier.py  mlp_regressor.py  neural_networks.py  optics_dbscan_pairs_clustering.py  pairs_selector.py  pi_sigma.py  pi_sigma_regressor.py  regressor_committee.py  rnn.py  stat_arb_utils.py  tar.py  threshold_filter.py
arbitragelab/ml_based_pairs_selection/: __init__.py  data_import.py  data_importer.py  pairs_selector.py  stat_arb_utils.py
arbitragelab/network/: __init__.py  imports.py  validation.py
arbitragelab/optimal_mean_reversion/: __init__.py  cir_model.py  heat_potential.py  heat_potentials.py  n_asset.py  ou_model.py  xou_model.py
arbitragelab/other_approaches/: __init__.py  etf_approach.py  kalman_filter.py  pca_approach.py  time_series.py
arbitragelab/pairs_selection/: __init__.py  base.py  cointegration.py
arbitragelab/pca_approach/: __init__.py  etf_approach.py  pca_approach.py
arbitragelab/spread_selection/: __init__.py  base.py  cointegration.py
arbitragelab/spread_trading/: __init__.py  minimum_profit.py  multi_coint.py  z_score.py
arbitragelab/stochastic_control_approach/: __init__.py  optimal_convergence.py  ou_model_jurek.py  ou_model_mudchanatongsuk.py
arbitragelab/tearsheet/: __init__.py  tearsheet.py
arbitragelab/tests/: test_cointegration_approach.py  test_copula.py  test_data_importer.py  test_distance_approach.py  test_kalman_filter.py  test_pairs_selector.py  test_pca_approach.py  test_risk_estimators.py
arbitragelab/time_series_approach/: __init__.py  arima_predict.py  h_strategy.py  ou_optimal_threshold.py  ou_optimal_threshold_Bertram.py  ou_optimal_threshold_Zeng.py  ou_optimal_threshold_bertram.py  ou_optimal_threshold_zeng.py  quantile_time_series.py  regime_switching_arbitrage_rule.py
arbitragelab/trading/: __init__.py  basic_copula.py  copula_strategy_mpi.py  minimum_profit.py  multi_coint.py  z_score.py
arbitragelab/util/: __init__.py  base_futures_roller.py  cl_roller.py  data_cursor.py  data_importer.py  devadarsh.py  generate_dataset.py  hurst.py  indexed_highlight.py  nbp_roller.py  rb_roller.py  risk_metrics.py  rollers.py  segment.py  split_dataset.py  spread_modeling_helper.py
docs/source/: changelog.rst  conf.py  index.rst  requirements.txt
licenses/c1_version/: license.lic  license.lic.txt
minimum_profit/: MinimumProfit.py  MinimumProfitSimulation.py  util.py
test/: test_minimum_profit.py
tests/: test_auto_arima.py  test_basic_copula_strategy.py  test_basic_copula_strategy_new.py  test_basic_distance_approach.py  test_cir_model.py  test_cir_module.py  test_codependence.py  test_coint_sim.py  test_cointegration_pairs_selection.py  test_copula.py  test_copula_basic_trading.py  test_copula_generate_mixedcopula.py  test_copula_pairs_selection.py  test_copula_strategy_mpi.py  test_copulas.py  test_data_importer.py  test_dbscan_pairs_clustering.py  test_etf_approach.py  test_feature_expander.py  test_filters.py  test_futures_roller.py  test_h_strategy.py  test_heat_potential.py  test_heat_potentials.py  test_hedge_ratios.py  test_hedge_ratios_spread_construction.py  test_indexed_highlight.py  test_kalman_filter.py  test_mean_reversion.py  test_minimum_profit.py  test_minimum_profit_simulation.py  test_mixed_copula.py  test_multi_coint.py  test_neural_networks.py  test_nn.py  test_optics_dbscan_pairs_clustering.py  test_optimal_convergence.py  test_ou_model.py  test_ou_model_jurek.py  test_ou_model_mudchanatongsuk.py  (+33 more)
tests/test_data/: AME-DOV.csv  ANZ-ADB.csv  BKD_ESC_2009_2011.csv  BKD_ESC_unittest_positions.csv  CL=F_NG=F_data.csv  Country_ETF.csv  NonNegative_CL_forward_roll.csv  NonNegative_nRB_forward_roll.csv  XLF-XLK.csv  b0.csv  cl.csv  data.csv  eh1.csv  eh2.csv  etf.csv  gld_gdx_data.csv  incorrect_data.csv  multi_coint.csv  nbp.csv  rb.csv  risk_free.csv  s.csv  shell-rdp-close_USD.csv  sp500_2016_test.csv  sp500_constituents-detailed.csv  stock_volume.csv  trading_signals.csv  trading_strategy_example.pkl
(+88 files in other folders)
