[metadata]
name = arbitragelab
version = 0.6.0
author = Hudson and Thames Quantitative Research
author_email = research@hudsonthames.org
licence = All Rights Reserved
licence-file = LICENSE.txt
description = ArbitrageLab helps portfolio managers and traders who want to leverage the power of statistical arbitrage by providing reproducible, interpretable, and easy to use tools.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://arbitragelab.readthedocs.io/en/latest/
    Bug Reports = ...
    Project Boards = https://github.com/orgs/hudson-and-thames/projects
    Source = https://github.com/hudson-and-thames/arbitragelab
    Blog = https://hudsonthames.org/blog/
    Apprenticeship Program = https://hudsonthames.org/apprenticeship-program/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    arbitrage
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    ~=3.8
setup_requires =
    setuptools
install_requires =
    cvxpy==1.2.0
    numpy==1.20.1
    matplotlib>=3.0.0, <3.3.0
    pandas==1.1.5
    scikit-learn==0.24.2
    scipy>=1.2.0, <2.0.0
    statsmodels>=0.9.0, <1.0.0
    cython>=0.29, <1.0.0
    POT==0.8.2
    yfinance==0.1.63
    yahoo-fin==0.8.6
    mpldatacursor==0.7.1
    lxml==4.6.2
    requests_html==0.10.0
    seaborn==0.11.1
    pmdarima==1.8.0
    arch==4.16.1
    pyvinecopulib==0.5.5
    dash>=1.0.0, <2.0.0
    mpmath==1.2.1
    networkx>=2.2, <2.6
    jupyter-dash>=0.2.0, <1.0.0
    getmac>=0.8.0, <1.0.0
    analytics-python>=1.2.7, <2.0.0

[options.packages.find]
package_dir =
    arbitragelab
exclude =
    contrib
    docs
    tests
