[metadata]
name = arbitragelab
version = 0.9.1
author = Hudson and Thames Quantitative Research
author_email = opensource@hudsonthames.org
licence = BSD 3-Clause License
licence-file = LICENSE.txt
description = ArbitrageLab is a collection of algorithms from the best academic journals and graduate-level textbooks, which focuses on the branch of statistical arbitrage known as pairs trading. We have extended the implementations to include the latest methods that trade a portfolio of n-assets (mean-reverting portfolios).
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://hudson-and-thames-arbitragelab.readthedocs-hosted.com/en/latest/index.html
    Bug Reports = https://github.com/hudson-and-thames/arbitragelab/issues
    Source = https://github.com/hudson-and-thames/arbitragelab
    Blog = https://hudsonthames.org/blog/
    Apprenticeship Program = https://hudsonthames.org/apprenticeship-program/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    arbitrage
    finance
    investment
    education
    trading

[options]
include_package_data = True
packages = find:
python_requires =
    ~=3.8
setup_requires =
    setuptools
install_requires =
    POT==0.9.1
    arch==5.5.0
    cvxpy==1.3.1
    cython==0.29.28
    dash==2.10.2
    jupyter-dash>=0.2.0, <1.0.0
    keras==2.12.0
    lxml>=4.9.1
    matplotlib==3.7.1
    mpmath==1.2.1
    networkx>=2.2, <2.6
    numpy==1.23.5
    pandas==2.0.0
    pmdarima==2.0.3
    protobuf>=3.20.3
    pyvinecopulib==0.6.5
    requests_html==0.10.0
    scikit-learn==1.1.3
    scipy>=1.2.0, <2.0.0
    scs==3.2.0
    seaborn==0.12.2
    statsmodels==0.14.0
    tensorflow-macos==2.12.0; sys_platform == 'darwin' and platform_machine == 'arm64'
    tensorflow==2.12.0; sys_platform != 'darwin' or platform_machine != 'arm64'
    werkzeug==2.2.3
    yahoo-fin==0.8.9.1
    yfinance==0.2.24

[options.packages.find]
package_dir =
    arbitragelab
exclude =
    contrib
    docs
    tests
